--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,13 +1,30 @@
 version: '3.8'
 services:
   jenkins:
-    image: jenkins/jenkins:lts
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    container_name: jenkins
     privileged: true
     user: root
     ports:
-     - 8081:8080
-     - 50001:50000
-    container_name: jenkins
+    - 8081:8080
+    - 50001:50000
     volumes:
-     - /home/rifqi/docker-volume/jenkins:/var/jenkins_home
-     - /var/run/docker.sock:/var/run/docker.sock
+    - /home/rifqi/docker-volume/jenkins:/var/jenkins_home
+    - /var/run/docker.sock:/var/run/docker.sock
+    # links:
+    # - redis
+    networks:
+      - network
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+    - 6379:6379
+    networks:
+    - network
+    command: redis-server --save 20 1 --requirepass 12345678 --loglevel warning
+networks:
+  network:
+    driver: bridge
